--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ="icon" type ="x-icon/image" href="images/skull-soldier-artwork-vector.webp">
     <title>Translator App</title>
 
     <link rel="stylesheet" href="./style.css">
