Added placeholder to the textarea

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-brand"><b>Pirates Speak</b></div>
     
 </nav>
-<textarea id="input" placeholder="Enter your text to translate!!">Hey you! Start Working!</textarea>
+<textarea id="input" placeholder="Enter your text to translate!!"></textarea>
 <button id="btn-translate"><b>Translate</b></button>
 <textarea id="output" placeholder="Output will be displayed here!"></textarea>
 
