--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div class="nav-brand"><b>Pirates Speak</b></div>
     
 </nav>
+<marquee direction="left" >
+   The API used is paid, and only allows 5 free translates/hour.
+    </marquee>
 <textarea id="input" placeholder="Enter your text to translate!!"></textarea>
 <button id="btn-translate"><b>Translate</b></button>
 <textarea id="output" placeholder="Output will be displayed here!"></textarea>
